CMAKE_MINIMUM_REQUIRED( VERSION 3.3.0 )
project(pyg3log)

SET( CMAKE_CXX_STANDARD 14 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )
set(PYBIND11_CPP_STANDARD -std=c++14)


FIND_PACKAGE( pybind11 REQUIRED )
FIND_PACKAGE( g3logger REQUIRED )
FIND_PACKAGE( g3logrotate REQUIRED)

FIND_PACKAGE(PythonInterp 3)
FIND_PACKAGE(PythonLibs   3)

IF( PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND AND PYBIND11_FOUND )
  INCLUDE_DIRECTORIES(
    ${PYTHON_INCLUDE_DIRS}
    ${PYBIND11_INCLUDE_DIRS}
  )
ENDIF()
#ADD_LIBRARY( pyg3log SHARED src/pyg3log.cpp)
pybind11_add_module(pyg3log MODULE src/pyg3log.cpp)
#SET_TARGET_PROPERTIES( pyg3log
#    PROPERTIES
#      PREFIX ""
#      LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/pyg3log"
#  )
#TARGET_LINK_LIBRARIES( pyg3log, "/usr/lib/libg3logrotate.so")


